k8s/_common/app.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend-skeleton
  namespace: public
  labels:
    k8s-app: frontend-skeleton
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: frontend-skeleton
  template:
    metadata:
      labels:
        k8s-app: frontend-skeleton
    spec:
      containers:
      - name: frontend-skeleton
        image: registry.gitlab.com/apolitical/frontend-skeleton:deploy-test.3
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: gitlab-registry-frontend-skeleton

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-skeleton
  namespace: public
  labels:
    k8s-app: frontend-skeleton
spec:
  selector:
    k8s-app: frontend-skeleton
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
